# finetune-qa-powerset

./: .env  README.md  format_and_lint.ps1  format_and_lint.sh  main.py  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yml  test.yml  tests.yml
definitions/: declarations.py
models/: __init__.py  models.py
tests/: conftest.py
tests/training_test/: metrics_test.py
training/: __init__.py  metrics.py  train.py  utils.py  validate.py
training_datasets/: __init__.py  datasets.py  ruquad_labeling.py
types/: declarations.py
