[tool.poetry]
name = "finetune-qa-powerset"
version = "0.1.0"
description = "Repo to finetune QA models using available QA resoures in Icelandic"
authors = ["lsig <logis21@ru.is>, njallskarp <njallis@gmail.com>, eysta00 <eysi@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finetune_qa_powerset"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.30.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
