[tool.poetry]
name = "finetune-qa-powerset"
version = "0.1.0"
description = "Repo to finetune QA models using available QA resoures in Icelandic"
authors = ["lsig <logis21@ru.is>, njallskarp <njallis@gmail.com>, eysta00 <eysi@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "finetune_qa_powerset"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
transformers = "^4.30.2"
tokenizers = "^0.13.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.275"
mypy = "^1.4.1"
pyright = "^1.1.316"

[tool.ruff]
line-length = 200  # defaults to 88 like black
target-version = "py311"  # the python version to target, useful when considering code upgrades, defaults to "py310"
include = ["**/*.py"]

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "I",   # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
